fix spacing

--- a/src/components/Images/ImageStack.module.scss
+++ b/src/components/Images/ImageStack.module.scss
@@ -2,8 +2,8 @@
   width: max-content;
   z-index: 0;
   padding: 25px;
-  margin: 0 auto;
-  margin-bottom: 1rem;
+  margin-left: auto;
+  margin-right: auto;
   position: relative;
   border-width: 1px;
   border-color: rgba(91, 91, 91, 0.054);
